# source/routes/user.route.js
@@ -1,11 +1,9 @@
 const router = require('express').Router();
 const UserController = require('../controllers/user.controller');
 const authenticateToken = require('../middlewares/jwt_auth.middleware');
-
+const check_role = require('../middlewares/check_role.middleware');
 
 //PUBLIC
-//GET /api/user/search?field={field}
-router.get("/search",authenticateToken,UserController.GetUserByField);
 
 //PRIVATE
 //GET /api/user/me
@@ -14,5 +12,13 @@ router.get("/me",authenticateToken,UserController.getMe);
 router.put("/me",authenticateToken,UserController.updateMe);
 //DELETE /api/user/me
 router.delete("/me",authenticateToken,UserController.deleteMe);
+
+//PRIVATE ADMIN
+//GET /api/user/search?field={field}
+router.get("/search",authenticateToken,check_role.isAdmin,UserController.GetUserByField);
+//PUT /api/user/
+router.put("/",authenticateToken,check_role.isAdmin,UserController.updateUser);
+//DELETE /api/user/
+router.delete("/",authenticateToken,check_role.isAdmin,UserController.deleteUser);
 
 module.exports = router;
