# source/swagger.yaml
@@ -52,61 +52,24 @@ paths:
         '201':
           description: JWT
 
-  /user/search:
-    get:
-      summary: Search for a user by field
-      description: Retrieve users based on specific search parameters such as ID, email, pseudo, name, or surname.
-      security:
-        - bearerAuth: []
-      parameters:
-        - name: id
-          in: query
-          schema:
-            type: string
-          description: The unique ID of the user
-        - name: email
-          in: query
-          schema:
-            type: string
-          description: The email of the user
-        - name: pseudo
-          in: query
-          schema:
-            type: string
-          description: The pseudo of the user
-        - name: name
-          in: query
-          schema:
-            type: string
-          description: The name of the user
-        - name: surname
-          in: query
-          schema:
-            type: string
-          description: The surname of the user
-      responses:
-        "200":
-          description: Successful response with user data
-        "449":
-          description: Invalid search field provided
-        "500":
-          description: Internal server error
   /user/me:
     get:
-      summary: Get authenticated user data
-      description: Retrieve the details of the authenticated user.
+      tags:
+        - User
+      summary: Get the authenticated user
       security:
-        - bearerAuth: []
+        - bearerAuth: [ ]
       responses:
-        "200":
-          description: Successful response with user data
-        "500":
+        '200':
+          description: User retrieved successfully
+        '500':
           description: Internal server error
     put:
-      summary: Update authenticated user data
-      description: Update user details like email, name, surname, pseudo, or password.
+      tags:
+        - User
+      summary: Update the authenticated user
       security:
-        - bearerAuth: []
+        - bearerAuth: [ ]
       requestBody:
         required: true
         content:
@@ -125,21 +88,492 @@ paths:
                 password:
                   type: string
       responses:
-        "200":
+        '200':
           description: User updated successfully
-        "449":
-          description: Invalid field provided
-        "500":
+        '500':
           description: Internal server error
     delete:
-      summary: Delete authenticated user
-      description: Remove the authenticated user from the system.
+      tags:
+        - User
+      summary: Delete the authenticated user
       security:
-        - bearerAuth: []
+        - bearerAuth: [ ]
       responses:
-        "200":
+        '200':
           description: User deleted successfully
-        "500":
+        '500':
+          description: Internal server error
+  /user/search:
+    get:
+      tags:
+        - User
+      summary: Search for users by field
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - in: query
+          name: id
+          schema:
+            type: integer
+          description: User ID
+        - in: query
+          name: email
+          schema:
+            type: string
+          description: User email
+        - in: query
+          name: pseudo
+          schema:
+            type: string
+          description: User pseudo
+        - in: query
+          name: name
+          schema:
+            type: string
+          description: User name
+        - in: query
+          name: surname
+          schema:
+            type: string
+          description: User surname
+      responses:
+        '200':
+          description: Users retrieved successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                        email:
+                          type: string
+                        name:
+                          type: string
+                        surname:
+                          type: string
+                        pseudo:
+                          type: string
+                        role:
+                          type: string
+                        active:
+                          type: boolean
+                        createdAt:
+                          type: string
+                          format: date-time
+        '400':
+          description: Invalid search field provided
+        '449':
+          description: One of the fields cannot be used
+        '500':
+          description: Internal server error
+  '/user':
+    put:
+      tags:
+        - User
+      summary: Update a user (Admin only)
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+                email:
+                  type: string
+                name:
+                  type: string
+                surname:
+                  type: string
+                pseudo:
+                  type: string
+      responses:
+        '200':
+          description: User updated successfully
+        '500':
+          description: Internal server error
+    delete:
+      tags:
+        - User
+      summary: Delete a user (Admin only)
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - in: query
+          name: id
+          schema:
+            type: string
+          required: true
+          description: ID of the user to delete
+      responses:
+        '200':
+          description: User deleted successfully
+        '500':
+          description: Internal server error
+
+  /hotel/search:
+    get:
+      tags:
+        - Hotel
+      summary: Search for hotels by field
+      parameters:
+        - in: query
+          name: id
+          schema:
+            type: integer
+          description: Hotel ID
+        - in: query
+          name: name
+          schema:
+            type: string
+          description: Hotel name
+        - in: query
+          name: address
+          schema:
+            type: string
+          description: Hotel address
+        - in: query
+          name: city
+          schema:
+            type: string
+          description: Hotel city
+        - in: query
+          name: country
+          schema:
+            type: string
+          description: Hotel country
+        - in: query
+          name: page
+          schema:
+            type: integer
+            default: 1
+          description: Page number for pagination
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            default: 10
+          description: Number of hotels per page
+      responses:
+        '200':
+          description: Hotels retrieved successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: object
+                    properties:
+                      hotels:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            id:
+                              type: integer
+                            name:
+                              type: string
+                            address:
+                              type: string
+                            city:
+                              type: string
+                            country:
+                              type: string
+                            description:
+                              type: string
+                            createdAt:
+                              type: string
+                              format: date-time
+                      totalCount:
+                        type: integer
+                      totalPages:
+                        type: integer
+                      currentPage:
+                        type: integer
+        '400':
+          description: Invalid search field provided
+        '449':
+          description: One of the fields cannot be used
+        '500':
+          description: Internal server error
+  '/hotel':
+    post:
+      tags:
+        - Hotel
+      summary: Create a hotel (Admin only)
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                address:
+                  type: string
+                city:
+                  type: string
+                country:
+                  type: string
+                description:
+                  type: string
+      responses:
+        '201':
+          description: Hotel created successfully
+        '500':
+          description: Internal server error
+    put:
+      tags:
+        - Hotel
+      summary: Update a hotel (Admin only)
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+                name:
+                  type: string
+                address:
+                  type: string
+                city:
+                  type: string
+                country:
+                  type: string
+                description:
+                  type: string
+      responses:
+        '200':
+          description: Hotel updated successfully
+        '500':
+          description: Internal server error
+    delete:
+      tags:
+        - Hotel
+      summary: Delete a hotel (Admin only)
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - in: query
+          name: id
+          schema:
+            type: string
+          required: true
+          description: ID of the hotel to delete
+      responses:
+        '200':
+          description: Hotel deleted successfully
+        '500':
+          description: Internal server error
+
+
+  /bookings/search:
+    get:
+      tags:
+        - Booking
+      summary: Search for bookings by field
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - in: query
+          name: id
+          schema:
+            type: integer
+          description: Booking ID
+        - in: query
+          name: room_id
+          schema:
+            type: integer
+          description: Room ID
+        - in: query
+          name: user_id
+          schema:
+            type: integer
+          description: User ID
+        - in: query
+          name: number_of_people
+          schema:
+            type: integer
+          description: Number of people for the booking
+        - in: query
+          name: date_in
+          schema:
+            type: string
+            format: date
+          description: Check-in date
+        - in: query
+          name: date_out
+          schema:
+            type: string
+            format: date
+          description: Check-out date
+        - in: query
+          name: paid
+          schema:
+            type: boolean
+          description: Payment status
+        - in: query
+          name: active
+          schema:
+            type: boolean
+          description: Booking active status
+        - in: query
+          name: page
+          schema:
+            type: integer
+            default: 1
+          description: Page number for pagination
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            default: 10
+          description: Number of bookings per page
+      responses:
+        '200':
+          description: Bookings retrieved successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: object
+                    properties:
+                      Bookings:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            id:
+                              type: integer
+                            room_id:
+                              type: integer
+                            user_id:
+                              type: integer
+                            number_of_people:
+                              type: integer
+                            date_in:
+                              type: string
+                              format: date
+                            date_out:
+                              type: string
+                              format: date
+                            paid:
+                              type: boolean
+                            active:
+                              type: boolean
+                            description:
+                              type: string
+                            createdAt:
+                              type: string
+                              format: date-time
+                      totalPages:
+                        type: integer
+        '400':
+          description: Invalid search field provided
+        '449':
+          description: One of the fields cannot be used
+        '500':
+          description: Internal server error
+  /booking:
+    post:
+      tags:
+        - Booking
+      summary: Create a booking
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                room_id:
+                  type: string
+                number_of_people:
+                  type: integer
+                date_in:
+                  type: string
+                  format: date
+                date_out:
+                  type: string
+                  format: date
+                paid:
+                  type: boolean
+      responses:
+        '201':
+          description: Booking created successfully
+        '500':
+          description: Internal server error
+    put:
+      tags:
+        - Booking
+      summary: Update a booking
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+                room_id:
+                  type: string
+                number_of_people:
+                  type: integer
+                date_in:
+                  type: string
+                  format: date
+                date_out:
+                  type: string
+                  format: date
+                paid:
+                  type: boolean
+      responses:
+        '200':
+          description: Booking updated successfully
+        '500':
+          description: Internal server error
+    delete:
+      tags:
+        - Booking
+      summary: Delete a booking
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - in: query
+          name: id
+          schema:
+            type: string
+          required: true
+          description: ID of the booking to delete
+      responses:
+        '200':
+          description: Booking deleted successfully
+        '500':
           description: Internal server error
 
 components:
